fixed: wrapped the cart-table in the form, the logic with subtracting the quantity was not working, fixed the pagination

--- a/static/styles/cart.css
+++ b/static/styles/cart.css
@@ -5,6 +5,8 @@
 .cart-table {
     width: 80%;
     border-collapse: collapse;
+    margin-left: 3em;
+    margin-top: 2em;
 }
 
 .cart-info {
